# otus_lectures

./: API-0.ipynb  API.ipynb  Build_Deploy.ipynb  OOP_indetails.ipynb  PythonAsyncIO.ipynb  PythonAuthentification.ipynb  PythonCGI_296721_01952c-296721-17f217.ipynb  PythonCodeDesign-296721-70533f.ipynb  PythonDDD-296721-5e8da4.ipynb  PythonDjango-296721-0e9d46.ipynb  PythonOOP.ipynb  PythonProfiling-296721-bb95ad.ipynb  PythonTests-133064-ba56c5.ipynb  Pythontesting_patterns_.ipynb  RawDB_296721_930671-214266-237c17.ipynb  SQLAlchemy.ipynb  WebSockets-296721-f7c6b8.ipynb  best.ipynb  mypy.ipynb  orm-296721-3b0292.ipynb  pyproject.toml
multithreading/: concurrency-296721-e660a3.py  python_threads_concurrency-296721-936b70.ipynb
